# Copyright (c) 2021-2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/test.gni")

ohos_moduletest("AppSpawnModuleTest") {
  module_out_path = "${module_output_path}"

  sources = [ "${appspawn_path}/test/moduletest/appspawn_module_test.cpp" ]

  include_dirs = [
    "//commonlibrary/c_utils/base/include",
    "//third_party/zlib/contrib/minizip",
    "//third_party/zlib",
  ]

  configs = [
    "${appspawn_path}:appspawn_config",
    "${ability_runtime_path}/services/appmgr:appmgr_config",
  ]

  deps = [
    "${ability_runtime_path}/services/appmgr:libappms",
    "${appspawn_path}/interfaces/innerkits:appspawn_socket_client",
    "//third_party/googletest:gtest_main",
  ]

  external_deps = [
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
  ]
}

group("moduletest") {
  testonly = true

  deps = [ ":AppSpawnModuleTest" ]
}
