# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/ohos.gni")

config("appspawn_threadpool") {
  include_dirs = [ "." ]
}

ohos_source_set("libappspawn_threadpool") {
  sources = [ "thread_manager.c" ]
  include_dirs = [
    ".",
    "${appspawn_path}/util/include",
    "${appspawn_path}/common",
  ]

  external_deps = [
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
  public_configs = [ ":appspawn_threadpool" ]
  subsystem_name = "${subsystem_name}"
  part_name = "${part_name}"
}
