# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/test.gni")

ohos_unittest("AppSpawn_client_ut") {
  module_out_path = "${module_output_path}"
  deps = []
  defines = [
    "clone=CloneStub",
    "bind=BindStub",
    "listen=ListenStub",
    "lchown=LchownStub",
    "lchmod=LchmodStub",
    "getsockopt=GetsockoptStub",
    "setgroups=SetgroupsStub",
    "setresuid=SetresuidStub",
    "setresgid=SetresgidStub",
    "capset=CapsetStub",
    "dlopen=DlopenStub",
    "dlsym=DlsymStub",
    "dlclose=DlcloseStub",
    "waitpid=WaitpidStub",
    "HapContext=HapContextStub",
    "APPSPAWN_TEST",
    "APPSPAWN_CLIENT",
    "OHOS_DEBUG",
    "GRAPHIC_PERMISSION_CHECK",
  ]
  include_dirs = [
    "${appspawn_path}",
    "${appspawn_path}/test/unittest",
    "${appspawn_path}/common",
    "${appspawn_path}/standard",
    "${appspawn_path}/adapter",
    "${appspawn_path}/adapter/sysevent",
    "${appspawn_path}/modules/sandbox",
    "${appspawn_path}/modules//module_engine//include",
    "${appspawn_path}/interfaces/innerkits_new/include",
    "${appspawn_path}/interfaces/innerkits_new/client",
    "${appspawn_path}/interfaces/innerkits_new/permission",
    "${appspawn_path}/util/include",
    "${appspawn_path}/interfaces/innerkits_new/module_engine/include",
    "${appspawn_path}/modules/module_engine/include",
    "//third_party/json/include",
  ]
  sources = [
    "${appspawn_path}/interfaces/innerkits_new/client/appspawn_client.c",
    "${appspawn_path}/interfaces/innerkits_new/client/appspawn_msg.c",
    "${appspawn_path}/interfaces/innerkits_new/permission/appspawn_mount_permission.c",
    "${appspawn_path}/modules/sandbox/appspawn_permission.c",
    "${appspawn_path}/util/src/appspawn_utils.c",
  ]

  sources += [ "${appspawn_path}/test/unittest/app_spawn_client_test/app_spawn_interface_test.cpp" ]

  deps += [
    "//third_party/cJSON:cjson",
    "//third_party/selinux:libselinux",
  ]
  external_deps = [
    "c_utils:utils",
    "config_policy:configpolicy_util",
    "hilog:libhilog",
    "init:libbegetutil",
  ]
}
