# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//base/startup/appspawn/appspawn.gni")
import("//build/test.gni")

if (!defined(ohos_lite)) {
  ohos_unittest("AppspawnExitLockTest") {
    module_out_path = "appspawn/appspawn"
    cflags = [
      "-Wno-implicit-fallthrough",
      "-Wno-unused-function",
      "-Dprivate=public",
      "-Dprotected=public",
    ]

    cflags_cc = [
      "-Wno-implicit-fallthrough",
      "-fexceptions",
    ]

    include_dirs = [
      "${appspawn_path}/common",
      "${appspawn_path}/standard",
      "${appspawn_path}/modules/common",
      "${appspawn_path}/test/mock",
      "${appspawn_path}/interfaces/innerkits/permission",
    ]

    sources = [
      "${appspawn_path}/test/unittest/app_spawn_exit_lock_test/appspawn_exit_lock_stub.cpp",
      "${appspawn_path}/common/appspawn_server.c",
      "${appspawn_path}/standard/appspawn_msgmgr.c",
      "${appspawn_path}/standard/appspawn_appmgr.c",
      "${appspawn_path}/modules/sandbox/normal/sandbox_shared_mount.cpp",
      "appspawn_exit_lock_test.cpp",
      "${appspawn_path}/modules/ace_adapter/command_lexer.cpp",
      "${appspawn_path}/modules/ace_adapter/ace_adapter.cpp",
    ]

    defines = [
      "APPSPAWN_EXIT_TEST",
      "APPSPAWN_TEST",
      "write=WriteStub",
      "close=CloseStub",
    ]

    external_deps = [
      "cJSON:cjson",
      "c_utils:utils",
      "ffrt:libffrt",
      "hilog:libhilog",
      "init:libbegetutil",
      "config_policy:configpolicy_util",
      "hitrace:hitrace_meter",
    ]

    deps = [
      "${appspawn_path}/interfaces/innerkits/client:appspawn_client",
      "${appspawn_path}/service/devicedebug:devicedebug",
      "${appspawn_path}/util:libappspawn_util",
    ]

  }
}
