# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/startup/appspawn/appspawn.gni")
import("//build/test.gni")

ohos_unittest("AppSpawn_HisysEvent_ut") {
  module_out_path = "appspawn/appspawn"
  deps = []
  if (appspawn_unittest_coverage) {
    cflags = [ "--coverage" ]
    ldflags = [ "--coverage" ]
    cflags_cc = [ "--coverage" ]
  }
  defines = [
    "APPSPAWN_TEST",
  ]

  include_dirs = [
    "${appspawn_path}/modules/sysevent",
    "${appspawn_path}/util/include",
    "${appspawn_path}/test/unittest/app_spawn_hisysevent_test",
  ]

  sources = [ 
    "${appspawn_path}/modules/sysevent/hisysevent_adapter.cpp",
    "${appspawn_path}/test/unittest/app_spawn_hisysevent_test/app_spawn_hisysevent_test.cpp",
    "${appspawn_path}/test/unittest/app_spawn_hisysevent_test/app_spawn_hisysevent_stub.c",
  ]

  external_deps = [
    "hisysevent:libhisysevent",
    "hilog:libhilog",
    "init:libbegetutil",
    "c_utils:utils",
    ]
}